--- a/index.html
+++ b/index.html
@@ -160,6 +160,21 @@
           </div>
           <div class="project-container">
             <div class="project-box">
+                <h3>Ticket Management System</h3>
+                <img src="assets/images/TicketManagementSystem.png" alt="TicketManagementSystem" style="width: 100%; height: 200px; object-fit: scale-down;">
+                <p><br>
+                    A web application for Ticket management to handle incidents effectively.
+                </p>
+            </div>
+            <div class="project-box">
+                <h3>Timing Based Covert Channel</h3>
+                <img src="assets/images/TimingBasedCovertChannel.png" alt="TimingBasedCovertChannel" style="width: 100%; height: 200px; object-fit: scale-down;">
+                <p>
+                    A proof of concept for covert communication <br>
+                    using timing intervals in HTTP requests to encode and transmit data.
+                </p>
+            </div>
+            <div class="project-box">
                 <h3>CyberArmory</h3>
                 <img src="assets/images/CyberArmory.png" alt="CyberArmory" style="width: 100%; height: 200px; object-fit: contain;">
                 <p>
