Enhanced Responsiveness, sections updated

--- a/projects.html
+++ b/projects.html
@@ -51,9 +51,6 @@
                 </li>
             </ul>
         </div>
-                </li>
-            </ul>
-        </div>
         <div class="nav-menu-btn">
             <i class="uil uil-bars" onclick="myMenuFunction()"></i>
         </div>
@@ -169,6 +166,7 @@
             <a href="https://www.linkedin.com/in/vansh123" class="icon"><i class="uil uil-linkedin-alt"></i></a>
             <a href="https://github.com/cs-vansh" class="icon"><i class="uil uil-github-alt"></i></a>
             <a href="https://medium.com/@vansh_" class="icon"><i class="uil uil-medium-m"></i></a>
+            <a href="https://tryhackme.com/p/0xburg" class="icon"><i class="uil uil-trophy"></i></a>
             <a href="https://www.instagram.com/cs_vansh" class="icon"><i class="uil uil-instagram"></i></a>
         </div>
     </footer>
