--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         <h3>Infosec Analyst</h3>
                         <h4>Leegality</h4>
                         <p>
-                            Focusing on improving the existing security posture by implementing new security controls. Managing third-party risk assessments, monitoring key security metrics and collaborating with cross-functional teams to ensure security first approach.
+                            Focusing on improving the existing security posture by implementing new security controls. Managing third-party risk assessments, monitoring key security metrics, conducting internal vulnerability assessments and collaborating with cross-functional teams to ensure security first approach.
                         </p>
                     </div>
                 </div>
@@ -181,7 +181,7 @@
                         <span>Jan 2025 - May 2025</span>
                     </div>
                     <div class="timeline-content">
-                        <h3>Software Development Intern</h3>
+                        <h3>Software Development Engineer</h3>
                         <h4>Compro Technologies</h4>
                         <p>
                             Gained hands-on experience in JS, Vue.js and Ruby on Rails, contributing to the development of web applications. Worked on enhancing user interfaces and improving application performance.
@@ -194,7 +194,7 @@
                         <span>Sep 2023 - Dec 2025</span>
                     </div>
                     <div class="timeline-content">
-                        <h3>Infosec Intern</h3>
+                        <h3>Infosec Analyst</h3>
                         <h4>Max Conformance</h4>
                         <p>
                             Supported governance, risk, and compliance operations within a SaaS-based compliance automation company. Conducted thorough risk assessments and worked extensively with security frameworks such as ISO, NIST, and SOC 2.
@@ -297,3 +297,4 @@
     <script src="./main.js"></script>
 </body>
 </html>
+
