--- a/index.html
+++ b/index.html
@@ -79,12 +79,11 @@
             <!--  add concept of Hash value to verify if the Resume isnt tempered with-->
             
             <div class="social_icons">
-                <a href="https://www.linkedin.com/in/vansh123" class="icon"><i class="uil uil-linkedin-alt"></i></a>
-                <a href="https://github.com/cs-vansh" class="icon"><i class="uil uil-github-alt"></i></a>
-                <a href="https://medium.com/@vansh_" class="icon"><i class="uil uil-medium-m"></i></a>
-                <a href="https://tryhackme.com/p/0xburg" class="icon"><i class="uil uil-trophy"></i></a>
-                <a href="https://www.instagram.com/cs_vansh" class="icon"><i class="uil uil-instagram"></i></a>
-                <!-- add leetcode -->
+                <a href="https://www.linkedin.com/in/vansh123" class="icon" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
+                <a href="https://github.com/cs-vansh" class="icon" target="_blank"><i class="uil uil-github-alt"></i></a>
+                <a href="https://medium.com/@vansh_" class="icon" target="_blank"><i class="uil uil-medium-m"></i></a>
+                <a href="https://tryhackme.com/p/0xburg" class="icon" target="_blank"><i class="uil uil-trophy"></i></a>
+                <a href="https://www.instagram.com/cs_vansh" class="icon" target="_blank"><i class="uil uil-instagram"></i></a>
             </div>
           </div>
           <div class="featured-image">  
@@ -277,11 +276,11 @@
             </ul>
         </div>
         <div class="footer-social-icons">
-            <a href="https://www.linkedin.com/in/vansh123" class="icon"><i class="uil uil-linkedin-alt"></i></a>
-            <a href="https://github.com/cs-vansh" class="icon"><i class="uil uil-github-alt"></i></a>
-            <a href="https://medium.com/@vansh_" class="icon"><i class="uil uil-medium-m"></i></a>
-            <a href="https://tryhackme.com/p/0xburg" class="icon"><i class="uil uil-trophy"></i></a>
-            <a href="https://www.instagram.com/cs_vansh" class="icon"><i class="uil uil-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/vansh123" class="icon" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
+            <a href="https://github.com/cs-vansh" class="icon" target="_blank"><i class="uil uil-github-alt"></i></a>
+            <a href="https://medium.com/@vansh_" class="icon" target="_blank"><i class="uil uil-medium-m"></i></a>
+            <a href="https://tryhackme.com/p/0xburg" class="icon" target="_blank"><i class="uil uil-trophy"></i></a>
+            <a href="https://www.instagram.com/cs_vansh" class="icon" target="_blank"><i class="uil uil-instagram"></i></a>
         </div>
     </footer>
 
