--- a/projects.html
+++ b/projects.html
@@ -68,6 +68,33 @@
        <!-- -------------- PROJECTS BOX ---------------- -->
        <section class="section" style="padding-top: 20px;">
           <div class="project-container">
+
+            <div class="project-box">
+                <h3>Secure It</h3>
+                <img src="assets/images/Secure-It.png" alt="Secure It" style="width: 100%; height: 200px; object-fit: scale-down;">
+                <p><br>
+                    An application for PDF redaction and batch encryption.
+                </p>
+                <div class="project-links">
+                    <a href="https://github.com/cs-vansh/Secure-It" class="project-link" target="_blank">
+                        <button class="btn">View Code <i class="uil uil-github-alt"></i></button>
+                    </a>
+                </div>
+            </div>
+
+            <div class="project-box">
+                <h3>RAG Q&A System</h3>
+                <img src="assets/images/RAG_QandA.png" alt="RAG_QandA" style="width: 100%; height: 200px; object-fit: scale-down;">
+                <p><br>
+                    A RAG system that processes Excel Q&A data and generates AI-powered responses using Ollama locally.
+                </p>
+                <div class="project-links">
+                    <a href="https://github.com/cs-vansh/RAG_QandA" class="project-link" target="_blank">
+                        <button class="btn">View Code <i class="uil uil-github-alt"></i></button>
+                    </a>
+                </div>
+            </div>
+
             <div class="project-box">
                 <h3>Incident Management System</h3>
                 <img src="assets/images/TicketManagementSystem.png" alt="IncidentManagementSystem" style="width: 100%; height: 200px; object-fit: scale-down;">
